# mobile-ffmpeg

./: .gitignore  .gitmodules  .travis.yml  Package.swift  README.md  Readme.md  android.sh  apple.sh  ios.sh  local.properties  mobile-ffmpeg-full.podspec  tag.sh  tvos.sh
ios/: .gitignore  Doxyfile  Info.plist  Makefile.in  build_libraries.sh  configure  configure.ac  debug.txt  libtool
ios/MobileFFmpeg.xcodeproj/: project.pbxproj
ios/MobileFFmpeg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/Sources/MobileFFmpeg/: ArchDetect.swift  FFmpegSession.swift  MediaInformation.swift  MobileFFmpeg.h  MobileFFmpegConfig.swift  MobileFFprobe.swift  Statistics.swift
ios/Sources/MobileFFmpegTests/: MobileFFmpegTests.swift
ios/Sources/ffmpeg/: include  lib  module.modulemap
ios/Sources/fftools/: fftools_cmdutils.c  fftools_ffmpeg.c  fftools_ffprobe.c
ios/src/: ArchDetect.h  ArchDetect.m  AtomicLong.m  ExecuteDelegate.h  FFmpegExecution.h  FFmpegExecution.m  LogDelegate.h  Makefile.am  Makefile.in  MediaInformation.h  MediaInformation.m  MediaInformationParser.h  MediaInformationParser.m  MobileFFmpeg.h  MobileFFmpeg.m  MobileFFmpegConfig.h  MobileFFmpegConfig.m  MobileFFprobe.h  MobileFFprobe.m  Statistics.h  Statistics.m  StatisticsDelegate.h  StreamInformation.h  StreamInformation.m  SwiftAVError.h  archdetect.h  archdetect.m  cmdutils.h  exception.c  exception.h  exception.m  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  fftools_cmdutils.c  fftools_cmdutils.h  fftools_ffmpeg.c  fftools_ffmpeg.h  fftools_ffmpeg_filter.c  (+11 more)
ios/test-app/: .gitignore  Podfile
ios/test-app/EasyTipView/: RCEasyTipView.h  RCEasyTipView.m  RCEasyTipViewIDGenerator.h  RCEasyTipViewIDGenerator.m  UIBarItem+RCBarItem.h  UIBarItem+RCBarItem.m  UIView+RCEssentials.h  UIView+RCEssentials.m
ios/test-app/MobileFFmpegTest/: AppDelegate.h  AppDelegate.m  AudioViewController.h  AudioViewController.m  CommandViewController.h  CommandViewController.m  Constants.h  Constants.m  FirstViewController.h  FirstViewController.m  HttpsViewController.h  HttpsViewController.m  Info.plist  MediaInformationParserTests.m  SecondViewController.h  SecondViewController.m  SubtitleViewController.h  SubtitleViewController.m  TabBarController.m  Util.h  Util.m  VidStabViewController.h  VidStabViewController.m  VideoViewController.h  VideoViewController.m  main.m
ios/test-app/MobileFFmpegTest.xcodeproj/: project.pbxproj
src/chromaprint/: .editorconfig  .editorconfig.vim  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile.cmake  LICENSE.md  NEWS.txt  README.md  config.h.in  libchromaprint.pc.cmake
src/chromaprint/src/: chroma.h  (+55 more)
src/expat/: .gitignore  CMake.README  CMakeLists.txt  Changes  ConfigureChecks.cmake  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  expat_config.h  expat_config.h.cmake  expat_config.h.in
src/fribidi/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.sh  bootstrap  config.h.in  configure  configure.ac  fribidi.pc.in  meson.build  meson_options.txt
src/gnutls/: .clcopying  .gitignore  AUTHORS  CONTRIBUTING.md  ChangeLog  GNUmakefile  INSTALL.md  Makefile.am  Makefile.in  NEWS  README.md  RELEASES.md  THANKS  aclocal.m4  aminclude_static.am  cfg.mk  config.h.in  configure  configure.ac  gtk-doc.make  maint.mk
src/kvazaar/: .gitignore  .gitlab-ci.yml  .gitmodules  .travis-install.bash  .travis.yml  COPYING  CREDITS  Dockerfile  Makefile.am  Makefile.in  README.md  aclocal.m4  appveyor.yml  autogen.sh  config.h.in  configure  configure.ac  docs.doxy
src/leptonica/: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  README.html  README.md  aclocal.m4  appveyor.yml  autobuild  autogen.sh  configure  configure.ac  cppan.yml  lept.pc.cmake  lept.pc.in  lok.lua  make-for-auto  make-for-local  style-guide.txt  sw.cpp  version-notes.html
src/libass/: .gitignore  Changelog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/libilbc/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  NEWS.md  README.md  aclocal.m4  config.h.cmakein  config.h.in  configure  configure.ac  libilbc.pc.in  typedefs.h
src/libsndfile/: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README  README.md  autogen.sh  configure.ac  echo-install-dirs.in
src/libtheora/: CHANGES  Makefile.am  Makefile.in  SConstruct  aclocal.m4  autogen.sh  config.guess  config.h.in  configure  configure.ac  libtheora.spec  libtheora.spec.in  theora-uninstalled.pc.in  theora.pc.in  theoradec-uninstalled.pc.in  theoradec.pc.in  theoraenc-uninstalled.pc.in  theoraenc.pc.in
src/libvorbis/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libvorbis.spec  libvorbis.spec.in  vorbis.pc.in
src/libwebp/: .gitignore  Android.mk  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  Makefile.vc  NEWS  README  README.mux  README.webp_js  aclocal.m4  build.gradle  config.status  configure  configure.ac  libtool  makefile.unix
src/opencore-amr/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
src/shine/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  README.old  aclocal.m4  configure  configure.ac  libshine.sym  shine.pc.in
src/speex/: .gitignore  INSTALL  Makefile.am  Makefile.in  README  README.TI-DSP  README.blackfin  README.symbian  Speex.spec  Speex.spec.in  TODO  aclocal.m4  config.h.in  configure  configure.ac  speex.m4  speex.pc.in
src/twolame/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  twolame.pc.in  twolame.spec  twolame.spec.in
src/vo-amrwbenc/: .gitignore  ChangeLog  Makefile.am  Makefile.in  NOTICE  README  aclocal.m4  amrwb-enc.c  configure  configure.ac  vo-amrwbenc.pc.in  vo-amrwbenc.sym  wrapper.c
src/wavpack/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  config.status  configure  configure.ac  libtool  wavpack.pc.in
(+13611 files in other folders)
